lab02: complete Exercise 1 report with verified results + screenshots
- Fill the equivalence-class table with behavior observed against the
  running app (302=accepted / 200=rejected): 19/20 Succes, TC20 = Echec
  (city not validated server-side)
- Correct field rules: real city list (Ottawa/Toronto/Montreal/Halifax)
  and actual on-screen messages (@Min/@Max, type-conversion error)
- Embed screenshots (UserName-too-short rejection, success page)
- Document the dropdown value="" template bug as a reported defect
  (System Under Test left unmodified)